2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Added CTCP.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Added commands performed on login.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Added automatic rejoin on kicked.

2007-08-02  Satoshi Nakagawa <artension@gmail.com>

	Added automatic rejoin to acquire op.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Added Growl notifications on logged in, disconnected, kicked, invited.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Changed the default action for Tab key to going to next channel.
	Changed to open new talk when sending a text message to unknown nick.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Implemented event sounds.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Added sound settings.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Added flood protection.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Fixed a bug, kana characters in 0xd0-0xdf were ignored in receiving.

2007-07-31  Satoshi Nakagawa <artension@gmail.com>

	Changed spacing strategy of log view.

2007-07-30  Satoshi Nakagawa <artension@gmail.com>

	Added address detection.
	Added address menu.

2007-07-30  Satoshi Nakagawa <artension@gmail.com>

	Added url menu.

2007-07-29  Satoshi Nakagawa <artension@gmail.com>

	Added settings for Growl notifications.

2007-07-29  Satoshi Nakagawa <artension@gmail.com>

	Added regexp escape to highlight words.

2007-07-29  Satoshi Nakagawa <artension@gmail.com>

	Added Growl notifications.
	Added message length check for quick join.

2007-07-28  Satoshi Nakagawa <artension@gmail.com>

	Released 0.8.
	Fixed a bug, checkboxes on dialogs are always stored as true.

2007-07-27  Satoshi Nakagawa <artension@gmail.com>

	Released 0.7.
	Fixed a bug, LimeChat.app won't start up at the first time.
	Tweaked preferences dialog.

2007-07-27  Satoshi Nakagawa <artension@gmail.com>

	Implemented Growl notifier module.
